--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,33 @@
 # AI Podcast Creator - Dependencies
 
 # Core Framework
-typer[all]==0.9.0
-rich==13.7.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
+typer[all]>=0.9.0,<0.15.0
+rich>=13.7.0,<14.0.0
+pydantic>=2.5.0,<3.0.0
+pydantic-settings>=2.1.0,<3.0.0
 
 # AI/ML Core
-torch==2.1.0
-torchaudio==2.1.0
-transformers==4.35.0
-diffusers==0.24.0
-accelerate==0.25.0
+torch>=2.1.0,<2.10.0
+torchaudio>=2.1.0,<2.10.0
+transformers>=4.35.0,<4.50.0
+diffusers>=0.24.0,<0.32.0
+accelerate>=0.25.0,<0.35.0
 
 # TTS Engines
-TTS==0.22.0
+TTS>=0.22.0,<0.25.0
 # Optional commercial APIs (uncomment if using):
 # elevenlabs==0.2.27
 # azure-cognitiveservices-speech==1.34.0
 
 # Audio Processing
 pydub==0.25.1
-librosa==0.10.1
+librosa>=0.10.1,<0.11.0
 soundfile==0.12.1
-scipy==1.11.4
-numpy==1.24.3
+scipy>=1.11.0,<1.15.0
+numpy>=1.24.0,<2.0.0
 
-# Music Generation
-audiocraft==1.3.0
+# Music Generation (Optional - can be skipped if build fails)
+audiocraft>=1.3.0,<1.5.0 ; python_version < '3.12'
 
 # Video Processing
 moviepy==1.0.3
@@ -37,25 +37,25 @@ imageio==2.33.0
 imageio-ffmpeg==0.4.9
 
 # Database
-sqlalchemy==2.0.23
-alembic==1.13.0
+sqlalchemy>=2.0.23,<2.1.0
+alembic>=1.13.0,<1.15.0
 
 # Task Queue (Optional)
-celery==5.3.4
-redis==5.0.1
+celery>=5.3.0,<6.0.0
+redis>=5.0.0,<6.0.0
 
 # API Framework (Optional)
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+fastapi>=0.104.0,<0.115.0
+uvicorn[standard]>=0.24.0,<0.35.0
 
 # Utilities
-python-dotenv==1.0.0
-requests==2.31.0
-httpx==0.25.2
-tenacity==8.2.3
-loguru==0.7.2
-tqdm==4.66.1
-pyyaml==6.0.1
+python-dotenv>=1.0.0,<2.0.0
+requests>=2.31.0,<3.0.0
+httpx>=0.25.0,<0.30.0
+tenacity>=8.2.0,<10.0.0
+loguru>=0.7.0,<0.8.0
+tqdm>=4.66.0,<5.0.0
+pyyaml>=6.0.0,<7.0.0
 
 # Development
 pytest==7.4.3
