--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ diffusers>=0.24.0,<0.32.0
 accelerate>=0.25.0,<0.35.0
 
 # TTS Engines
-TTS>=0.22.0,<0.25.0
+gTTS>=2.3.0,<3.0.0  # Fallback TTS engine (works on all Python versions)
+TTS>=0.22.0,<0.25.0 ; python_version < '3.12'  # Advanced TTS (not compatible with Python 3.12+)
 # Optional commercial APIs (uncomment if using):
 # elevenlabs==0.2.27
 # azure-cognitiveservices-speech==1.34.0
@@ -26,8 +27,8 @@ soundfile==0.12.1
 scipy>=1.11.0,<1.15.0
 numpy>=1.24.0,<2.0.0
 
-# Music Generation (Optional - can be skipped if build fails)
-audiocraft>=1.3.0,<1.5.0 ; python_version < '3.12'
+# Music Generation (Optional - requires 'av' package which has build issues on Windows)
+# audiocraft>=1.3.0,<1.5.0 ; python_version < '3.12'
 
 # Video Processing
 moviepy==1.0.3
