fix: Add missing test dependencies and remove duplicates
- Added hypothesis, pytest-xdist, pytest-timeout, pytest-benchmark to requirements.txt
- Added 'benchmark' marker to pytest.ini
- Removed duplicate test_video_integration_fixed.py file
- This fixes NameError for 'given' and benchmark marker errors in CI

--- a/pytest.ini
+++ b/pytest.ini
@@ -34,6 +34,7 @@ markers =
     mutation: Mutation testing for test quality validation
     performance: Performance and load tests
     chaos: Chaos engineering tests for resilience
+    benchmark: Performance benchmark tests
 
 # Coverage settings are now in .coveragerc or pyproject.toml
 
