--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,10 @@ pyyaml>=6.0.0,<7.0.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
+pytest-xdist>=3.5.0,<4.0.0
+pytest-timeout>=2.2.0,<3.0.0
+pytest-benchmark>=4.0.0,<5.0.0
+hypothesis>=6.96.0,<7.0.0
 black==23.12.1
 flake8==6.1.0
 mypy==1.7.1
