fix: Add relative_files=true to coverage config for CI
Fixes coverage report generation failure in CI by ensuring coverage
uses relative paths instead of absolute paths, as required by the
coverage comment action.

--- a/.coveragerc
+++ b/.coveragerc
@@ -6,7 +6,8 @@ omit =
     */__pycache__/*
     */external/*
 parallel = false
-branch = false
+branch = true
+relative_files = true
 
 [report]
 precision = 2
