fix: Change job name to 'Test Suite' to match branch protection requirement

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   test:
-    name: Test Python ${{ matrix.python-version }}
+    name: Test Suite
     runs-on: ${{ matrix.os }}
     
     strategy:
