fix: Change aggregate job name to 'Test Python 3.11' to match branch protection ruleset

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -151,7 +151,7 @@ jobs:
       continue-on-error: true
 
   test-aggregate:
-    name: Test Suite
+    name: Test Python 3.11
     needs: test
     runs-on: ubuntu-latest
     if: always()
