--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,8 @@ scipy>=1.11.0,<1.15.0
 numpy>=1.24.0,<2.0.0
 
 # Music Generation (Optional - requires 'av' package which has build issues on Windows)
-# audiocraft>=1.3.0,<1.5.0 ; python_version < '3.12'
+# Note: May have compatibility issues with Python 3.12+, test before using
+audiocraft>=1.3.0,<1.5.0 ; python_version < '3.12'
 
 # Video Processing
 moviepy==1.0.3
