--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pytest-cov pytest-xdist pytest-timeout
+        pip install pytest pytest-cov pytest-xdist pytest-timeout mypy
     
     - name: Run linting
       run: |
@@ -52,6 +52,11 @@ jobs:
         flake8 src/ --count --max-line-length=120 --statistics
         black --check src/ tests/
       continue-on-error: true
+
+    - name: Run mypy
+      run: |
+        mypy src/ --config-file pyproject.toml
+      continue-on-error: false
     
     - name: Run tests with coverage
       run: |
