--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -178,3 +178,35 @@ jobs:
       run: |
         pytest --cov=src --cov-report=term --cov-fail-under=30
         echo "✅ Coverage threshold (30%) passed!"
+  mutmut:
+    if: ${{ vars.RUN_MUTMUT == 'true' }}
+    name: Mutation Testing
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential
+
+    - name: Install dev requirements
+      run: |
+        pip install -r requirements-dev.txt
+
+    - name: Run mutmut
+      run: |
+        python -m mutmut run --CI
+
+    - name: Show surviving mutants
+      if: always()
+      run: |
+        python -m mutmut results || true
