fix: resolve all MyPy type errors and CI workflow issues
- Fix gpu_memory type annotation (float instead of int)
- Fix database.py Base class type ignores (remove unused)
- Fix audio_visualizer.py duration/sr type issues
- Fix video_composer.py ImageFont type assignment
- Fix music_generator.py return types (Path | None)
- Fix avatar_generator.py missing return statement
- Fix cli/main.py database import handling and list() call
- Update CI workflows to install types-PyYAML and types-requests
- Add explicit_package_bases to mypy config
- All tests still passing (40 passed in avatar_generator, 2 in music_generator, 27 in audio_visualizer)

--- a/.github/workflows/quality-advanced.yml
+++ b/.github/workflows/quality-advanced.yml
@@ -62,7 +62,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
-        pip install mypy
+        pip install mypy types-PyYAML types-requests
     
     - name: Run MyPy
       run: |
