--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pytest-cov pytest-xdist pytest-timeout mypy
+        pip install pytest pytest-cov pytest-xdist pytest-timeout mypy types-PyYAML types-requests
     
     - name: Run linting
       run: |
