--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ skips = ["*/test_*.py"]
 
 [tool.mypy]
 python_version = "3.10"
+explicit_package_bases = true
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
