fix: install pyyaml early in codecov workflow

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -28,6 +28,7 @@ jobs:
     
     - name: Install Python dependencies
       run: |
+        pip install pyyaml  # Install yaml early for conftest.py
         pip install -r requirements.txt
         pip install pytest pytest-cov pytest-xdist
     
