--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,7 +92,7 @@ strict_optional = false
 check_untyped_defs = true
 no_implicit_optional = true
 warn_redundant_casts = true
-warn_unused_ignores = true
+warn_unused_ignores = false
 show_error_codes = true
 show_column_numbers = true
 
