--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,8 @@ numpy>=1.23.0,<2.0.0  # Compatible with librosa 0.10.2+ and most ML libraries
 
 # Music Generation (Optional - requires 'av' package which has build issues on Windows)
 # Note: May have compatibility issues with Python 3.12+, test before using
-audiocraft>=1.3.0,<1.5.0 ; python_version < '3.12'
+# Disabled in CI due to build failures - install manually if needed
+# audiocraft>=1.3.0,<1.5.0 ; python_version < '3.12'
 
 # Video Processing
 moviepy==1.0.3
