--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,7 +44,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pyyaml  # Install yaml early for conftest.py
         # Install core test dependencies first
-        pip install numpy typer hypothesis pytest pytest-cov pytest-xdist pytest-timeout mypy types-PyYAML types-requests
+        pip install numpy typer hypothesis sortedcontainers pytest pytest-cov pytest-xdist pytest-timeout mypy types-PyYAML types-requests
         # Install requirements (may fail on optional packages like av/audiocraft)
         pip install -r requirements.txt || pip install -r requirements.txt --no-deps || true
     
