--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -63,8 +63,8 @@ jobs:
     
     - name: Run tests with coverage
       run: |
-        pytest --cov=src --cov-report=xml --cov-report=term -n auto --maxfail=5 --tb=short
-      timeout-minutes: 10
+        pytest --cov=src --cov-report=xml --cov-report=term -n auto --maxfail=10 --tb=short || exit 1
+      timeout-minutes: 15
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
