--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,8 +43,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyyaml  # Install yaml early for conftest.py
-        # Install core test dependencies first
-        pip install numpy typer hypothesis sortedcontainers pytest pytest-cov pytest-xdist pytest-timeout mypy types-PyYAML types-requests
+        # Install core test dependencies first (without pytest - comes from requirements.txt)
+        pip install pyyaml numpy typer hypothesis sortedcontainers mypy types-PyYAML types-requests
         # Install requirements - continue even if optional packages like av/audiocraft fail
         pip install -r requirements.txt || echo "Some packages failed to install (expected for optional dependencies)"
     
