--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,9 +42,10 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyyaml  # Install yaml early for conftest.py
-        # Install core test dependencies first (without pytest - comes from requirements.txt)
-        pip install pyyaml numpy typer hypothesis sortedcontainers mypy types-PyYAML types-requests
+        # Install pyyaml early for conftest.py (before requirements.txt)
+        pip install pyyaml
+        # Install core test dependencies (pytest comes from requirements.txt)
+        pip install numpy typer hypothesis sortedcontainers mypy types-PyYAML types-requests
         # Install requirements - continue even if optional packages like av/audiocraft fail
         pip install -r requirements.txt || echo "Some packages failed to install (expected for optional dependencies)"
     
