fix: make gradio and librosa.display optional dependencies
- Make librosa.display import optional (requires matplotlib)
- Fix gradio mock injection in test_web_interface.py before import
- Fix PowerShell syntax in tests.yml (use bash shell for exit)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -63,8 +63,9 @@ jobs:
       continue-on-error: true
     
     - name: Run tests with coverage
+      shell: bash
       run: |
-        pytest --cov=src --cov-report=xml --cov-report=term -n auto --maxfail=10 --tb=short || exit 1
+        pytest --cov=src --cov-report=xml --cov-report=term -n auto --maxfail=10 --tb=short
       timeout-minutes: 15
     
     - name: Upload coverage to Codecov
