--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -28,11 +28,16 @@ jobs:
     
     - name: Install Python dependencies
       run: |
+        python -m pip install --upgrade pip
         pip install pyyaml  # Install yaml early for conftest.py
-        # Install core test dependencies (pytest comes from requirements.txt)
+        # Install core test dependencies FIRST (pytest must be available)
         pip install numpy hypothesis sortedcontainers
-        # Install requirements - continue even if optional packages like av/audiocraft fail
-        pip install -r requirements.txt || echo "Some packages failed to install (expected for optional dependencies)"
+        pip install pytest pytest-asyncio pytest-cov pytest-xdist pytest-timeout pytest-benchmark
+        # Install requirements - continue even if optional packages fail
+        # Note: ffmpegcv[cuda] is commented out in requirements.txt to avoid pycuda build issues in CI
+        pip install -r requirements.txt || echo "Some optional packages failed to install (expected)"
+        # Ensure pytest is still available even if requirements.txt had issues
+        pip install pytest pytest-cov || true
     
     - name: Run tests with coverage
       run: |
