fix: Install ffmpeg and improve dependencies in Quality Advanced workflow
- Added ffmpeg installation to test-coverage-trend job
- Improved dependency installation to match test workflow (install pytest first)
- Fixes coverage trend analysis failures due to missing ffmpeg/ffprobe

--- a/.github/workflows/quality-advanced.yml
+++ b/.github/workflows/quality-advanced.yml
@@ -136,10 +136,21 @@ jobs:
       with:
         python-version: '3.11'
     
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg
+    
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
-        pip install pytest pytest-cov
+        python -m pip install --upgrade pip
+        # Install core test dependencies FIRST (pytest must be available)
+        pip install numpy typer hypothesis sortedcontainers mypy types-PyYAML types-requests
+        pip install pytest pytest-asyncio pytest-cov pytest-xdist pytest-timeout pytest-benchmark
+        # Install requirements - continue even if optional packages fail
+        pip install -r requirements.txt || echo "Some optional packages failed to install (expected)"
+        # Ensure pytest is still available even if requirements.txt had issues
+        pip install pytest pytest-cov || true
     
     - name: Generate coverage report
       run: |
