--- a/.github/workflows/quality-advanced.yml
+++ b/.github/workflows/quality-advanced.yml
@@ -165,27 +165,25 @@ jobs:
     - name: Coverage summary
       if: always()
       run: |
-        if [ -f coverage.json ]; then
-          echo "📊 Coverage Summary:"
-          python3 <<'PYEOF'
-          import json
-          try:
-              with open('coverage.json') as f:
-                  data = json.load(f)
-                  total = data['totals']['percent_covered']
-                  print(f'Total Coverage: {total:.2f}%')
-                  
-                  print('\n📈 Module Coverage:')
-                  for file, stats in sorted(data['files'].items()):
-                      if 'src/' in file:
-                          name = file.split('src/')[-1]
-                          cov = stats['summary']['percent_covered']
-                          print(f'  {name}: {cov:.1f}%')
-          except Exception as e:
-              print(f'Error reading coverage.json: {e}')
+python3 - <<'PYEOF'
+import json
+from pathlib import Path
+
+coverage_path = Path("coverage.json")
+if not coverage_path.exists():
+    print("⚠️ Coverage report not generated (tests may have failed)")
+else:
+    print("📊 Coverage Summary:")
+    with coverage_path.open() as f:
+        data = json.load(f)
+    total = data["totals"]["percent_covered"]
+    print(f"Total Coverage: {total:.2f}%")
+    print("\n📈 Module Coverage:")
+    for file, stats in sorted(data["files"].items()):
+        if "src/" in file:
+            name = file.split("src/")[-1]
+            cov = stats["summary"]["percent_covered"]
+            print(f"  {name}: {cov:.1f}%")
 PYEOF
-        else
-          echo "⚠️ Coverage report not generated (tests may have failed)"
-        fi
       continue-on-error: true
 
