--- a/.github/workflows/quality-advanced.yml
+++ b/.github/workflows/quality-advanced.yml
@@ -150,7 +150,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         # Install core test dependencies FIRST (pytest must be available)
-        pip install numpy typer hypothesis sortedcontainers mypy types-PyYAML types-requests
+        pip install "numpy>=1.23,<2.0.0" typer hypothesis sortedcontainers mypy types-PyYAML types-requests
         pip install pytest pytest-asyncio pytest-cov pytest-xdist pytest-timeout pytest-benchmark
         # Install requirements - continue even if optional packages fail
         pip install -r requirements.txt || echo "Some optional packages failed to install (expected)"
