fix: Add benchmark marker and skip benchmark tests when plugin disabled
- Add 'benchmark' marker to pytest.ini for pytest-benchmark plugin
- Add benchmark fixture to conftest.py that skips tests when plugin not available
- Fixes CI failures when PYTEST_DISABLE_PLUGIN_AUTOLOAD=1 is set
- Benchmark tests now gracefully skip instead of failing

--- a/pytest.ini
+++ b/pytest.ini
@@ -14,3 +14,4 @@ markers =
     performance: Perf/load tests
     smoke: Smoke tests for quick validation
     no_cpu_patch: Tests that should not use CPU patching
+    benchmark: Performance benchmark tests (pytest-benchmark)
