fix: Exclude test_complete_setup.py from pytest collection
- Add testpaths = tests to pytest.ini to only collect tests from tests/ directory
- Exclude test_complete_setup.py which is a standalone script, not a pytest test
- Fixes PytestReturnNotNoneWarning warnings in CI

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,8 @@ addopts =
     -q
     --strict-markers
     --tb=short
+testpaths = tests
+norecursedirs = .git .venv venv __pycache__ .pytest_cache
 markers =
     gpu: GPU-dependent tests (quarantined by default; set PY_ENABLE_GPU_TESTS=1 to run)
     unit: Fast unit tests
