--- a/pytest.ini
+++ b/pytest.ini
@@ -17,3 +17,4 @@ markers =
     smoke: Smoke tests for quick validation
     no_cpu_patch: Tests that should not use CPU patching
     benchmark: Performance benchmark tests (pytest-benchmark)
+    chaos: Chaos engineering tests
