--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,6 +53,7 @@ jobs:
           pytest -q | tee pytest_run1.log
           exit_code=${PIPESTATUS[0]}
           echo "exit_code=${exit_code}" >> "$GITHUB_OUTPUT"
+          echo "Pytest run 1 completed with exit code: ${exit_code}"
           exit "${exit_code}"
 
       - name: Pytest run 2 (determinism check)
@@ -64,19 +65,39 @@ jobs:
           pytest -q | tee pytest_run2.log
           exit_code=${PIPESTATUS[0]}
           echo "exit_code=${exit_code}" >> "$GITHUB_OUTPUT"
+          echo "Pytest run 2 completed with exit code: ${exit_code}"
           exit "${exit_code}"
 
       - name: Compare run results
         if: always()
         shell: bash
         run: |
-          echo "Run 1 exit code: ${{ steps.pytest1.outputs.exit_code }}"
-          echo "Run 2 exit code: ${{ steps.pytest2.outputs.exit_code }}"
-          if [ "${{ steps.pytest1.outputs.exit_code }}" != "${{ steps.pytest2.outputs.exit_code }}" ]; then
-            echo "Pytest exit codes differed between runs. Tests are not deterministic."
+          # Get exit codes, defaulting to empty string if not set
+          exit_code_1="${{ steps.pytest1.outputs.exit_code }}"
+          exit_code_2="${{ steps.pytest2.outputs.exit_code }}"
+          
+          echo "Run 1 exit code: '${exit_code_1}'"
+          echo "Run 2 exit code: '${exit_code_2}'"
+          
+          # Check if exit codes are set (not empty)
+          if [ -z "${exit_code_1}" ] || [ -z "${exit_code_2}" ]; then
+            echo "ERROR: Exit codes not captured properly"
+            echo "Run 1 status: ${{ steps.pytest1.outcome }}"
+            echo "Run 2 status: ${{ steps.pytest2.outcome }}"
             exit 1
           fi
-          if [ "${{ steps.pytest2.outputs.exit_code }}" != "0" ]; then
-            echo "Pytest failed (exit code ${{ steps.pytest2.outputs.exit_code }})."
-            exit ${{ steps.pytest2.outputs.exit_code }}
+          
+          # Check if exit codes differ (non-deterministic)
+          if [ "${exit_code_1}" != "${exit_code_2}" ]; then
+            echo "ERROR: Pytest exit codes differed between runs. Tests are not deterministic."
+            echo "Run 1: ${exit_code_1}, Run 2: ${exit_code_2}"
+            exit 1
           fi
+          
+          # Check if pytest failed
+          if [ "${exit_code_2}" != "0" ]; then
+            echo "ERROR: Pytest failed (exit code ${exit_code_2})."
+            exit "${exit_code_2}"
+          fi
+          
+          echo "SUCCESS: Both runs completed successfully with exit code 0"
