fix: Always exit 0 in pytest steps to ensure outputs are captured
- Change pytest steps to always exit 0 instead of exiting with pytest exit code
- This ensures GITHUB_OUTPUT variables are captured even when pytest fails
- The real exit code is still captured via PIPESTATUS and stored in outputs
- Compare step will check the captured exit codes, not the step outcome
- Fixes issue where exit_code outputs weren't available in compare step

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,7 +54,8 @@ jobs:
           exit_code=${PIPESTATUS[0]}
           echo "exit_code=${exit_code}" >> "$GITHUB_OUTPUT"
           echo "Pytest run 1 completed with exit code: ${exit_code}"
-          exit "${exit_code}"
+          # Always exit 0 to allow continue-on-error to work, but capture real exit code
+          exit 0
 
       - name: Pytest run 2 (determinism check)
         id: pytest2
@@ -66,7 +67,8 @@ jobs:
           exit_code=${PIPESTATUS[0]}
           echo "exit_code=${exit_code}" >> "$GITHUB_OUTPUT"
           echo "Pytest run 2 completed with exit code: ${exit_code}"
-          exit "${exit_code}"
+          # Always exit 0 to allow continue-on-error to work, but capture real exit code
+          exit 0
 
       - name: Compare run results
         if: always()
