--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,71 +44,39 @@ jobs:
 
       # NOTE: Mutation testing (mutmut) should run in a dedicated workflow due to runtime cost.
 
-      - name: Pytest run 1
-        id: pytest1
-        shell: bash
-        continue-on-error: true
-        run: |
-          set +e
-          pytest -q | tee pytest_run1.log
-          exit_code=${PIPESTATUS[0]}
-          echo "exit_code=${exit_code}" >> "$GITHUB_OUTPUT"
-          echo "Pytest run 1 completed with exit code: ${exit_code}"
-          # Always exit 0 to allow continue-on-error to work, but capture real exit code
-          exit 0
-
-      - name: Pytest run 2 (determinism check)
-        id: pytest2
-        shell: bash
-        continue-on-error: true
-        run: |
-          set +e
-          pytest -q | tee pytest_run2.log
-          exit_code=${PIPESTATUS[0]}
-          echo "exit_code=${exit_code}" >> "$GITHUB_OUTPUT"
-          echo "Pytest run 2 completed with exit code: ${exit_code}"
-          # Always exit 0 to allow continue-on-error to work, but capture real exit code
-          exit 0
-
-      - name: Compare run results
-        if: always()
+      - name: Run pytest twice and compare
         shell: bash
         run: |
-          set -x  # Enable debug output
+          # Run pytest first time
+          echo "=== Pytest Run 1 ==="
+          pytest -q > pytest_run1.log 2>&1
+          exit_code_1=$?
+          echo "Run 1 exit code: ${exit_code_1}"
           
-          # Get exit codes, defaulting to empty string if not set
-          exit_code_1="${{ steps.pytest1.outputs.exit_code }}"
-          exit_code_2="${{ steps.pytest2.outputs.exit_code }}"
+          # Run pytest second time
+          echo ""
+          echo "=== Pytest Run 2 ==="
+          pytest -q > pytest_run2.log 2>&1
+          exit_code_2=$?
+          echo "Run 2 exit code: ${exit_code_2}"
           
-          echo "=== Debug Information ==="
-          echo "Run 1 exit code (raw): '${{ steps.pytest1.outputs.exit_code }}'"
-          echo "Run 2 exit code (raw): '${{ steps.pytest2.outputs.exit_code }}'"
-          echo "Run 1 exit code (var): '${exit_code_1}'"
-          echo "Run 2 exit code (var): '${exit_code_2}'"
-          echo "Run 1 outcome: ${{ steps.pytest1.outcome }}"
-          echo "Run 2 outcome: ${{ steps.pytest2.outcome }}"
-          echo "Run 1 conclusion: ${{ steps.pytest1.conclusion }}"
-          echo "Run 2 conclusion: ${{ steps.pytest2.conclusion }}"
-          
-          # Check if exit codes are set (not empty)
-          if [ -z "${exit_code_1}" ] || [ -z "${exit_code_2}" ]; then
-            echo "ERROR: Exit codes not captured properly"
-            echo "exit_code_1 is empty: $([ -z "${exit_code_1}" ] && echo 'YES' || echo 'NO')"
-            echo "exit_code_2 is empty: $([ -z "${exit_code_2}" ] && echo 'YES' || echo 'NO')"
-            exit 1
-          fi
-          
-          # Check if exit codes differ (non-deterministic)
+          # Compare results
+          echo ""
+          echo "=== Comparison ==="
           if [ "${exit_code_1}" != "${exit_code_2}" ]; then
-            echo "ERROR: Pytest exit codes differed between runs. Tests are not deterministic."
-            echo "Run 1: ${exit_code_1}, Run 2: ${exit_code_2}"
+            echo "ERROR: Exit codes differ (${exit_code_1} vs ${exit_code_2}). Tests are not deterministic."
             exit 1
           fi
           
-          # Check if pytest failed
           if [ "${exit_code_2}" != "0" ]; then
-            echo "ERROR: Pytest failed (exit code ${exit_code_2})."
-            exit "${exit_code_2}"
+            echo "ERROR: Pytest failed with exit code ${exit_code_2}"
+            echo ""
+            echo "=== Run 1 Output (last 50 lines) ==="
+            tail -50 pytest_run1.log
+            echo ""
+            echo "=== Run 2 Output (last 50 lines) ==="
+            tail -50 pytest_run2.log
+            exit ${exit_code_2}
           fi
           
           echo "SUCCESS: Both runs completed successfully with exit code 0"
