fix: Add debug output and fix exit code capture with tee
- Use PIPESTATUS[0] to capture exit code when using tee
- Add set -x for bash debug output
- Show more lines of error output (100 instead of 50)
- Use tee to see output in real-time while also saving to log
- This should show what's actually failing in CI

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,35 +47,47 @@ jobs:
       - name: Run pytest twice and compare
         shell: bash
         run: |
+          set -e  # Exit on error
+          set -x  # Debug output
+          
           # Run pytest first time
           echo "=== Pytest Run 1 ==="
-          pytest -q > pytest_run1.log 2>&1
-          exit_code_1=$?
+          pytest -q 2>&1 | tee pytest_run1.log
+          exit_code_1=${PIPESTATUS[0]}
           echo "Run 1 exit code: ${exit_code_1}"
           
           # Run pytest second time
           echo ""
           echo "=== Pytest Run 2 ==="
-          pytest -q > pytest_run2.log 2>&1
-          exit_code_2=$?
+          pytest -q 2>&1 | tee pytest_run2.log
+          exit_code_2=${PIPESTATUS[0]}
           echo "Run 2 exit code: ${exit_code_2}"
           
           # Compare results
           echo ""
           echo "=== Comparison ==="
+          echo "Exit code 1: ${exit_code_1}"
+          echo "Exit code 2: ${exit_code_2}"
+          
           if [ "${exit_code_1}" != "${exit_code_2}" ]; then
             echo "ERROR: Exit codes differ (${exit_code_1} vs ${exit_code_2}). Tests are not deterministic."
+            echo ""
+            echo "=== Run 1 Output (last 100 lines) ==="
+            tail -100 pytest_run1.log || echo "Could not read pytest_run1.log"
+            echo ""
+            echo "=== Run 2 Output (last 100 lines) ==="
+            tail -100 pytest_run2.log || echo "Could not read pytest_run2.log"
             exit 1
           fi
           
           if [ "${exit_code_2}" != "0" ]; then
             echo "ERROR: Pytest failed with exit code ${exit_code_2}"
             echo ""
-            echo "=== Run 1 Output (last 50 lines) ==="
-            tail -50 pytest_run1.log
+            echo "=== Run 1 Output (last 100 lines) ==="
+            tail -100 pytest_run1.log || echo "Could not read pytest_run1.log"
             echo ""
-            echo "=== Run 2 Output (last 50 lines) ==="
-            tail -50 pytest_run2.log
+            echo "=== Run 2 Output (last 100 lines) ==="
+            tail -100 pytest_run2.log || echo "Could not read pytest_run2.log"
             exit ${exit_code_2}
           fi
           
