fix: Add verbose output to see actual CI errors
- Show Python and pytest versions
- Use -v for verbose output
- Use --tb=short then --tb=long if short fails
- This will finally show what's actually failing in CI

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,4 +47,10 @@ jobs:
       - name: Run tests
         shell: bash
         run: |
-          pytest -q
+          # Show pytest version and Python version for debugging
+          python --version
+          pytest --version
+          echo ""
+          echo "=== Running pytest ==="
+          # Run with verbose output to see actual errors
+          pytest -v --tb=short || pytest -v --tb=long
