fix: Use --override-ini to ensure verbose output shows in CI
- pytest.ini has -q which might suppress error output
- Use --override-ini to override config and show verbose output
- This will finally show which tests are failing in CI

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,5 +51,6 @@ jobs:
           pytest --version
           echo ""
           echo "=== Running pytest ==="
-          # Run with verbose output to see actual errors
-          pytest -v --tb=short || pytest -v --tb=long
+          # Override pytest.ini -q with -v for verbose output
+          # Use --override-ini to ensure verbose output shows
+          pytest --override-ini="addopts=-v --tb=short" || pytest --override-ini="addopts=-v --tb=long"
