--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -42,8 +42,12 @@ jobs:
         pip install pytest pytest-cov || true
     
     - name: Run tests with coverage
+      id: coverage_output
       run: |
         pytest --cov=src --cov-report=xml --cov-report=html --cov-report=term-missing
+        # Extract coverage percentage for output
+        COVERAGE=$(python -c "import xml.etree.ElementTree as ET; tree = ET.parse('coverage.xml'); root = tree.getroot(); print(root.attrib['line-rate'])")
+        echo "coverage=$COVERAGE" >> $GITHUB_OUTPUT
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
